test/expected/declare_fco_exclam_b.out
declare ! as friend constant operator returning bool
        ^
9: error: operator overloading is not supported in C
